# zingolib

./: Cargo.toml  README.md
darkside-tests/: Cargo.toml
darkside-tests/src/: chain_generics.rs  constants.rs  darkside_connector.rs  utils.rs
darkside-tests/tests/: advanced_reorg_tests.rs  tests.rs
docker-ci/: Dockerfile  README.txt
libtonode-tests/: Cargo.toml
libtonode-tests/src/: chain_generics.rs
libtonode-tests/tests/: chain_generics.rs  concrete.rs  shield_transparent.rs  sync.rs  wallet.rs
pepper-sync/: Cargo.toml  README.md
pepper-sync/src/: activation.rs  client.rs  config.rs  error.rs  keys.rs  lib.rs  scan.rs  sync.rs  wallet.rs  witness.rs
pepper-sync/src/client/: fetch.rs
pepper-sync/src/keys/: transparent.rs
pepper-sync/src/scan/: compact_blocks.rs  task.rs  transactions.rs
pepper-sync/src/scan/compact_blocks/: runners.rs
pepper-sync/src/sync/: spend.rs  state.rs  transparent.rs
pepper-sync/src/wallet/: serialization.rs  traits.rs
zingo-auto-shield-cli/: Cargo.toml  README.md  config.example.toml  config.toml
zingo-auto-shield-cli/src/: main.rs
zingo-cli/: Cargo.toml  README.md
zingo-cli/src/: commands.rs  lib.rs  main.rs  regtest.rs
zingo-cli/src/commands/: utils.rs
zingo-memo/: Cargo.toml
zingo-memo/src/: lib.rs
zingo-price/: Cargo.toml
zingo-price/src/: lib.rs
zingo-status/: Cargo.toml
zingo-status/src/: confirmation_status.rs
zingo-testutils/: Cargo.toml
zingolib/: CHANGELOG.md  Cargo.toml  build.rs
zingolib/src/: config.rs  data.rs  error.rs  grpc_client.rs  grpc_connector.rs  lib.rs  lightclient.rs  mocks.rs  testutils.rs  utils.rs  wallet.rs
zingolib/src/data/: proposal.rs
zingolib/src/lightclient/: error.rs  propose.rs  save.rs  send.rs  sync.rs
zingolib/src/testutils/: assertions.rs  lightclient.rs
zingolib/src/testutils/chain_generics/: conduct_chain.rs  fixtures.rs  networked.rs  with_assertions.rs
zingolib/src/wallet/: balance.rs  disk.rs  error.rs  keys.rs  legacy.rs  output.rs  propose.rs  restrictions.rs  send.rs  summary.rs  sync.rs  transaction.rs  utils.rs  zcb_traits.rs
zingolib/src/wallet/disk/: testing.rs
zingolib/src/wallet/disk/testing/: examples.rs  tests.rs
zingolib/src/wallet/keys/: legacy.rs  unified.rs
zingolib/src/wallet/keys/legacy/: extended_transparent.rs
zingolib_testutils/: Cargo.toml
zingolib_testutils/src/: scenarios.rs
