#  The order of the members reflects a dimension of the dependency relation, the first four depend on
#     *  zingolib
#  which depends in turn, on the bottom 3.
#  This doesn't account for all dependency relations, for example, zingocli depends on zingoconfig directly (for now).
[workspace]
members = [
    "libtonode-tests",
    "darkside-tests",
    "zingo-cli",
    "zingolib",
    "zingo-memo",
    "pepper-sync",
    "zingo-price", "zingolib_testutils", "zingo-auto-shield-cli",
]
resolver = "2"

[workspace.dependencies]
bip0039 = { version = "0.12", features = ["rand"] }
bip32 = { version = "0.6.0-pre.1", default-features = false }

zip32 = "0.2.0"
orchard = "0.11.0"
sapling-crypto = "0.5.0"
incrementalmerkletree = "0.8.2"
shardtree = "0.6.1"
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b", features = [
    "lightwalletd-tonic",
    "orchard",
    "transparent-inputs",
    "tor",
] }
zcash_encoding = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
] }
zcash_note_encryption = "0.4.1"
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash", rev = "d387aed7e04e881dbe30c6ff8b26a96c834c094b" }

zebra-chain = { git = "https://github.com/zingolabs/zebra.git" , rev = "1168a2f391a17f3ccab65a095d9219b7455d0fea" }

zingo_netutils = { git = "https://github.com/zingolabs/zingo-common.git", rev = "2a2d2ec037eafe421e78994768e8a665106c3a83" }
zingo_common_components = { git = "https://github.com/zingolabs/zingo-common.git", rev = "2a2d2ec037eafe421e78994768e8a665106c3a83" }

append-only-vec = "0.1.7"
bech32 = "0.11.0"
bs58 = "0.5"
byteorder = "1"
bytes = "1"
chrono = "0.4"
clap = "4"
concat-idents = "1"
dirs = "6"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
http = "1"
http-body-util = "0.1"
http-body = "1"
hyper-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
indoc = "2"
itertools = "0.14"
json = "0.12"
jubjub = "0.10"
log = "0.4"
log4rs = "1"
memuse = "0.2"
nonempty = "0.11.0"
portpicker = "0.1"
proptest = "1.6.0"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12.15", default-features = false }
ring = "0.17"
rusqlite = "0.32"
rust_decimal = "1.37.2"
rust-embed = "6"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustyline = "11"
secp256k1 = "0.29.1"
secrecy = "0.8"
serde = "1"
serde_json = "1"
shellwords = "1"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-rustls = "0.26"
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
tonic-build = "0.13"
tower = { version = "0.5" }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.25"

# Parallel processing
crossbeam-channel = "0.5"
rayon = "1"

# Documentation
simple-mermaid = "0.2.0"

# Workspace
zingo-memo = { path = "zingo-memo" }
zingo-price = { path = "zingo-price" }
zingo-status = { path = "zingo-status" }
pepper-sync = { path = "pepper-sync" }
zingolib = { path = "zingolib" }

[patch.crates-io]
zebra-chain = { git = "https://github.com/zingolabs/zebra.git", rev = "1168a2f391a17f3ccab65a095d9219b7455d0fea" }

[profile.test]
opt-level = 3
