[package]
name = "libtonode-tests"
version = "0.2.0"
edition = "2024"
publish = false

[features]
default = ["chain_generic_tests", "proptests"]
proptests = ["proptest"]
chain_generic_tests = []
ci = ["zingolib/ci"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zingolib = { workspace = true, features = ["darkside_tests", "testutils"] }
zingo_netutils = { workspace = true }
zingo_common_components = { workspace = true, features = ["for_test"] }
pepper-sync = { workspace = true }
zingo-status = { workspace = true }

zingolib_testutils = { version = "0.1.0", path = "../zingolib_testutils", features = ["test_lwd_zcashd"]}
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "5553bc50339bb13e208688387be8496ae59a7d5c" }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", rev = "51162c0c603d324a3c36f1cead17bf4680aa1dca" }

zip32 = { workspace = true }
zcash_address = { workspace = true, features = ["test-dependencies"] }
zcash_client_backend = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
bip0039.workspace = true
zebra-chain = { git = "https://github.com/zingolabs/zebra.git" , rev = "1168a2f391a17f3ccab65a095d9219b7455d0fea" }

tokio = { workspace = true, features = ["full"] }
json = { workspace = true }
itertools = { workspace = true }
proptest = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true

http = { workspace = true }

[dev-dependencies]
rustls.workspace = true
