[package]
name = "zingo-memo"
description = "Utilities for procedural creation and parsing of the Memo field for ZCash."
authors = ["<zingo@zingolabs.org>"]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/zingolabs/zingolib"
homepage = "https://github.com/zingolabs/zingolib"
license = "MIT"


[dependencies]
zcash_address.workspace = true
zcash_client_backend.workspace = true
zcash_encoding.workspace = true
zcash_keys.workspace = true
zcash_primitives.workspace = true

[dev-dependencies]
rand.workspace = true
