[package]
name = "zingo-status"
description = "A Rust library for representing and working with transaction confirmation status in ZCash."
authors = ["<zingo@zingolabs.org>"]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/zingolabs/zingolib"
homepage = "https://github.com/zingolabs/zingolib"
license = "MIT"

[dependencies]
zcash_primitives = { workspace = true }
byteorder = { workspace = true }
