[package]
name = "zingolib_testutils"
version = "0.1.0"
edition = "2024"

[features]
test_zainod_zcashd = []
test_lwd_zebrad = []
test_lwd_zcashd = []

[dependencies]

# zingolib
zingolib = { workspace = true, features = ["testutils"] }
pepper-sync.workspace = true
zingo_common_components.workspace = true

# zingo infrastructure
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "5553bc50339bb13e208688387be8496ae59a7d5c" }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", rev = "51162c0c603d324a3c36f1cead17bf4680aa1dca" }

# zcash
zebra-chain.workspace = true
zcash_protocol.workspace = true

# bitcoin

bip0039.workspace = true

# utilties

portpicker.workspace = true
tempfile.workspace = true
http.workspace = true
zip32.workspace = true
